# modelscope-image-gen

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  main.py  pyproject.toml  server.json
.github/workflows/: ci.yml
docs/: agent-project-continuity-meta-guide.md
docs/decisions/: 0001-use-git-source-distribution.md  README.md
docs/maintenance/: README.md
docs/rebuild/: 00-rebuild-direction.md  01-product-and-information-architecture.md  02-technology-stack-decisions.md  03-domain-model-and-behavior-map.md  04-config-and-storage-schema.md  05-mcp-interface-contract.md  06-core-organization.md  07-agent-experience.md  08-implementation-brief.md
docs/superpowers/plans/: 2026-07-10-rebuild-phase-0-foundation.md
legacy/: README.md
legacy/v0.1.0/: README.md  README.zh-CN.md
legacy/v0.1.0/src/modelscope_image_gen/: __init__.py  config.py  server.py  task_store.py
legacy/v0.1.0/src/modelscope_image_gen/infrastructure/: __init__.py  client.py
legacy/v0.1.0/src/modelscope_image_gen/mcp/: argument_validation.py  server.py  tool_metadata.py
legacy/v0.1.0/src/modelscope_image_gen/services/: __init__.py  image_service.py  payloads.py
legacy/v0.1.0/src/modelscope_image_gen/services/workflows/: common.py  generate.py  phase.py  result.py
legacy/v0.1.0/tests/: test_client.py  test_server_errors.py  test_service_generate_errors.py  test_service_generate_polling.py
src/modelscope_image_gen/: __init__.py  __main__.py  bootstrap.py  cli.py  client.py  config.py  server.py  service.py
src/modelscope_image_gen/application/: navigation.py  provider_outcomes.py  repositories.py  results.py  views.py
src/modelscope_image_gen/application/ports/: artifact_store.py  provider.py  system.py  use_cases.py
src/modelscope_image_gen/application/use_cases/: check_generation.py  fetch_generation_result.py  generate_image.py  list_generations.py  locking.py  submit_generation.py
src/modelscope_image_gen/domain/: __init__.py  artifacts.py  errors.py  ids.py  jobs.py  requests.py  states.py
src/modelscope_image_gen/infrastructure/: task_store.py
src/modelscope_image_gen/infrastructure/artifacts/: maintenance.py  store.py
src/modelscope_image_gen/infrastructure/concurrency/: job_locks.py
src/modelscope_image_gen/infrastructure/config/: logging.py  paths.py  settings.py
src/modelscope_image_gen/infrastructure/modelscope/: http_mapping.py  image_download.py  provider.py
src/modelscope_image_gen/infrastructure/sqlite/: pagination.py  repository.py  row_mapping.py
src/modelscope_image_gen/infrastructure/sqlite/migrations/: v001_initial.sql
src/modelscope_image_gen/infrastructure/system/: identifiers.py  waiting.py
src/modelscope_image_gen/mcp/: __init__.py  argument_validation.py  server.py
src/modelscope_image_gen/mcp_adapter/: mapping.py  registry.py  server.py  tool_contract.py
src/modelscope_image_gen/mcp_adapter/handlers/: tools.py
src/modelscope_image_gen/mcp_adapter/models/: inputs.py  outputs.py
src/modelscope_image_gen/mcp_adapter/presenters/: common.py
src/modelscope_image_gen/services/: payloads.py
src/modelscope_image_gen/services/workflows/: __init__.py  common.py  generate.py  phase.py  result.py  status.py  submit.py
tests/: service_test_helpers.py  test_architecture.py  test_cli.py  test_client.py  test_config.py  test_server_errors.py  test_service_async_flow.py  test_service_errors.py  test_service_generate_outputs.py  test_task_store.py
tests/application/: test_fetch_generation_result.py  test_generate_image.py  test_submit_and_check.py
tests/domain/: test_generation_job.py
tests/infrastructure/: test_artifact_store.py  test_modelscope_provider.py  test_recovery_and_pagination.py  test_sensitive_data.py  test_sqlite_repository.py
tests/live/: test_live_modelscope.py
tests/mcp_adapter/: test_in_memory_client.py  test_tool_contracts.py
