[project]
name = "modelscope-image-gen-mcp"
version = "0.1.0"
description = "Modern MCP server for ModelScope image generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
modelscope-image-gen-mcp = "modelscope_image_gen.server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelscope_image_gen"]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pyright]
include = ["main.py", "src", "tests"]
extraPaths = ["src"]
reportMissingImports = "none"
